--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
     </properties>
 
     <dependencies>
+
+        <!--Apache fluent for transfer json to telegram/email apps -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>fluent-hc</artifactId>
+            <version>4.5.6</version>
+        </dependency>
         <!-- Quartz для выполнения работы по расписанию -->
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
