--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,17 @@
             <version>1.18.20</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId> log4j </groupId>
+            <artifactId> log4j </artifactId>
+            <version> 1.2.16 </version>
+        </dependency>
     </dependencies>
 
     <build>
